--- a/web_scrape_exercise.ipynb
+++ b/web_scrape_exercise.ipynb
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
     "    quote = person.find(class_='quote').text.strip()\n",
     "    email = person.find(class_='email').text\n",
     "    phone_number = person.find(class_='phone').text\n",
-    "    address = person.find(class_='address').text.strip\n",
+    "    address = person.find(class_='address').text.strip()\n",
     "    \n",
     "    return {\n",
     "        \"name\": name,\n",
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "      <td>\"Programmable background workforce\"</td>\n",
        "      <td>hward@sanders.com</td>\n",
        "      <td>562.869.8732x549</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>9790 Jeremiah Walks \\n                Mullinss...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -783,7 +783,7 @@
        "      <td>\"Multi-lateral high-level policy\"</td>\n",
        "      <td>hbrennan@thomas.com</td>\n",
        "      <td>001-462-801-4632x12055</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>096 Edward Gateway \\n                Danport, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -791,7 +791,7 @@
        "      <td>\"Proactive client-driven conglomeration\"</td>\n",
        "      <td>mporter@brandt.info</td>\n",
        "      <td>727.736.2101</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>77944 James Way \\n                East David, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -799,7 +799,7 @@
        "      <td>\"Compatible actuating software\"</td>\n",
        "      <td>bellrobert@espinoza.biz</td>\n",
        "      <td>001-872-372-4391x111</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>50628 Jason Mountain Apt. 397 \\n              ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -807,7 +807,7 @@
        "      <td>\"Cross-platform static monitoring\"</td>\n",
        "      <td>novakjason@yahoo.com</td>\n",
        "      <td>207-089-5010</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>9368 Clayton Mill \\n                Marcboroug...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -815,7 +815,7 @@
        "      <td>\"Horizontal content-based complexity\"</td>\n",
        "      <td>jasonsalinas@hotmail.com</td>\n",
        "      <td>6887183591</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>492 Evans Walk Apt. 163 \\n                Nort...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -823,7 +823,7 @@
        "      <td>\"Persistent analyzing throughput\"</td>\n",
        "      <td>charlesanderson@yahoo.com</td>\n",
        "      <td>749-845-1819</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>121 Long Islands Apt. 698 \\n                So...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -831,7 +831,7 @@
        "      <td>\"Monitored eco-centric implementation\"</td>\n",
        "      <td>jenniferavila@gmail.com</td>\n",
        "      <td>073-098-4181x44916</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>940 Jessica Crossroad \\n                Lake K...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -839,7 +839,7 @@
        "      <td>\"Distributed fresh-thinking hardware\"</td>\n",
        "      <td>chavezleonard@gmail.com</td>\n",
        "      <td>(369)355-6245</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>51115 Pace Streets Apt. 626 \\n                ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -847,7 +847,7 @@
        "      <td>\"Profit-focused analyzing paradigm\"</td>\n",
        "      <td>emilywalker@hubbard-miller.info</td>\n",
        "      <td>001-318-456-6607</td>\n",
-       "      <td>&lt;built-in method strip of str object at 0x7fb8...</td>\n",
+       "      <td>02063 Ferguson Inlet Suite 356 \\n             ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -879,19 +879,19 @@
        "9  emilywalker@hubbard-miller.info        001-318-456-6607   \n",
        "\n",
        "                                             address  \n",
-       "0  <built-in method strip of str object at 0x7fb8...  \n",
-       "1  <built-in method strip of str object at 0x7fb8...  \n",
-       "2  <built-in method strip of str object at 0x7fb8...  \n",
-       "3  <built-in method strip of str object at 0x7fb8...  \n",
-       "4  <built-in method strip of str object at 0x7fb8...  \n",
-       "5  <built-in method strip of str object at 0x7fb8...  \n",
-       "6  <built-in method strip of str object at 0x7fb8...  \n",
-       "7  <built-in method strip of str object at 0x7fb8...  \n",
-       "8  <built-in method strip of str object at 0x7fb8...  \n",
-       "9  <built-in method strip of str object at 0x7fb8...  "
+       "0  9790 Jeremiah Walks \\n                Mullinss...  \n",
+       "1  096 Edward Gateway \\n                Danport, ...  \n",
+       "2  77944 James Way \\n                East David, ...  \n",
+       "3  50628 Jason Mountain Apt. 397 \\n              ...  \n",
+       "4  9368 Clayton Mill \\n                Marcboroug...  \n",
+       "5  492 Evans Walk Apt. 163 \\n                Nort...  \n",
+       "6  121 Long Islands Apt. 698 \\n                So...  \n",
+       "7  940 Jessica Crossroad \\n                Lake K...  \n",
+       "8  51115 Pace Streets Apt. 626 \\n                ...  \n",
+       "9  02063 Ferguson Inlet Suite 356 \\n             ...  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
