acquire news articles exercise

--- a/acquire_news_articles.ipynb
+++ b/acquire_news_articles.ipynb
@@ -80,7 +80,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Business"
+    "#### Business\n",
+    "- need to grab :\n",
+    "    - article title\n",
+    "    - content\n",
+    "    - category"
    ]
   },
   {
@@ -128,10 +132,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Business News: World and India Business News in English with Inshorts'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#container of info we want\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#title\n",
+    "title = soup.title.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Serum Institute of India (SII) CEO Adar Poonawalla on Monday issued a statement to \"clarify certain things\" adding that his comments \"may have been misinterpreted\". He said that vaccine manufacturing is a specialised process and it wasn\\'t possible to ramp up production overnight. Even the most advanced countries with populations smaller than India are struggling, Poonawalla said.\\n\\nshort by Sakshita Khosla / \\n      06:00 pm on 03 May'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#content\n",
+    "soup.find(class_= 'news-card-content').text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<li class=\"active-category\">All News</li>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find(class_= 'active-category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#category\n"
+   ]
   }
  ],
  "metadata": {
