lesson through normalization

--- a/nlp_prepare_lesson.ipynb
+++ b/nlp_prepare_lesson.ipynb
@@ -42,6 +42,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- normalization just means making everything into a form that is friendly to us by lowercasing, removing punctuation, etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#you would get two differnt values for these because they are not \n",
+    "#the same\n",
+    "'math' == 'Math'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -74,13 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdős and george pólya are influential hungarian mathematicians who contributed a lot tothe field. erdős's name contains the hungarian letter 'ő' ('o' with double acute accent), but is oftenincorrectly written as erdos or erdös either by mistake or out of typographical necessity\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#lowercase all letters in the text\n",
     "\n",
-    "article = "
+    "article = original.lower()\n",
+    "article"
    ]
   },
   {
@@ -92,14 +133,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'erdos'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unicodedata.normalize('NFKD', 'erdős')\\\n",
+    ".encode('ascii', 'ignore').decode() #ignore things you dont recognize in ascii\n",
+    "#decode gets rid of b and puts it in original form"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot tothe field. erdos's name contains the hungarian letter 'o' ('o' with double acute accent), but is oftenincorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Remove inconsistencies in unicode character encoding.\n",
     "# encode the strings into ASCII bytestrings (ignore non-ASCII characters)\n",
     "# decode the bytestring into (Unicode) string\n",
-    "\n",
+    "#nfkd is a normalization form\n",
     "article = unicodedata.normalize('NFKD', article)\\\n",
     ".encode('ascii', 'ignore')\\\n",
     ".decode('utf-8', 'ignore')\n",
@@ -116,13 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot tothe field erdos's name contains the hungarian letter 'o' 'o' with double acute accent but is oftenincorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# remove anything that is not a through z, a number, a single quote, or whitespace\n",
     "\n",
-    "article = "
+    "article = re.sub(r\"[^a-z0-9'\\s]\", '', article)\n",
+    "article"
    ]
   },
   {
@@ -280,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,27 +379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "179"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(stopword_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
