lesson notes complete

--- a/nlp_prepare_lesson.ipynb
+++ b/nlp_prepare_lesson.ipynb
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "\"Paul Erdős and George Pólya are influential Hungarian mathematicians who contributed a lot tothe field. Erdős's name contains the Hungarian letter 'ő' ('o' with double acute accent), but is oftenincorrectly written as Erdos or Erdös either by mistake or out of typographical necessity\""
+       "\"Paul Erdős and George Pólya are influential Hungarian mathematicians who contributed a lot to the field. Erdős's name contains the Hungarian letter 'ő' ('o' with double acute accent), but is often incorrectly written as Erdos or Erdös either by mistake or out of typographical necessity\""
       ]
      },
      "execution_count": 3,
@@ -87,8 +87,8 @@
     }
    ],
    "source": [
-    "original = \"Paul Erdős and George Pólya are influential Hungarian mathematicians who contributed a lot to\\\n",
-    "the field. Erdős's name contains the Hungarian letter 'ő' ('o' with double acute accent), but is often\\\n",
+    "original = \"Paul Erdős and George Pólya are influential Hungarian mathematicians who contributed a lot to \\\n",
+    "the field. Erdős's name contains the Hungarian letter 'ő' ('o' with double acute accent), but is often \\\n",
     "incorrectly written as Erdos or Erdös either by mistake or out of typographical necessity\"\n",
     "\n",
     "original"
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "\"paul erdős and george pólya are influential hungarian mathematicians who contributed a lot tothe field. erdős's name contains the hungarian letter 'ő' ('o' with double acute accent), but is oftenincorrectly written as erdos or erdös either by mistake or out of typographical necessity\""
+       "\"paul erdős and george pólya are influential hungarian mathematicians who contributed a lot to the field. erdős's name contains the hungarian letter 'ő' ('o' with double acute accent), but is often incorrectly written as erdos or erdös either by mistake or out of typographical necessity\""
       ]
      },
      "execution_count": 4,
@@ -155,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot tothe field. erdos's name contains the hungarian letter 'o' ('o' with double acute accent), but is oftenincorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot to the field. erdos's name contains the hungarian letter 'o' ('o' with double acute accent), but is often incorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot tothe field erdos's name contains the hungarian letter 'o' 'o' with double acute accent but is oftenincorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot to the field erdos's name contains the hungarian letter 'o' 'o' with double acute accent but is often incorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,14 +221,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paul',\n",
+       " 'erdos',\n",
+       " 'and',\n",
+       " 'george',\n",
+       " 'polya',\n",
+       " 'are',\n",
+       " 'influential',\n",
+       " 'hungarian',\n",
+       " 'mathematicians',\n",
+       " 'who',\n",
+       " 'contributed',\n",
+       " 'a',\n",
+       " 'lot',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'field',\n",
+       " 'erdos',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'name',\n",
+       " 'contains',\n",
+       " 'the',\n",
+       " 'hungarian',\n",
+       " 'letter',\n",
+       " \"'\",\n",
+       " 'o',\n",
+       " \"'\",\n",
+       " \"'\",\n",
+       " 'o',\n",
+       " \"'\",\n",
+       " 'with',\n",
+       " 'double',\n",
+       " 'acute',\n",
+       " 'accent',\n",
+       " 'but',\n",
+       " 'is',\n",
+       " 'often',\n",
+       " 'incorrectly',\n",
+       " 'written',\n",
+       " 'as',\n",
+       " 'erdos',\n",
+       " 'or',\n",
+       " 'erdos',\n",
+       " 'either',\n",
+       " 'by',\n",
+       " 'mistake',\n",
+       " 'or',\n",
+       " 'out',\n",
+       " 'of',\n",
+       " 'typographical',\n",
+       " 'necessity']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create the tokenizer\n",
     "tokenizer = nltk.tokenize.ToktokTokenizer()\n",
     "\n",
-    "# Use the tokenizer\n"
+    "# Use the tokenizer\n",
+    "tokenizer.tokenize(article) #gives us each word in the sentence, similar to .split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot to the field erdos ' s name contains the hungarian letter ' o ' ' o ' with double acute accent but is often incorrectly written as erdos or erdos either by mistake or out of typographical necessity\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#tokenized the puncuation left over\n",
+    "tokenizer.tokenize(article, return_str = True)"
    ]
   },
   {
@@ -259,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,24 +353,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'influenc'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Apply the stemmer to each word in our string.\n",
-    "\n",
-    "stems = "
+    "#stem it word by word\n",
+    "stems = ps.stem('influence')\n",
+    "stems"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos and george polya are influential hungarian mathematicians who contributed a lot to the field erdos's name contains the hungarian letter 'o' 'o' with double acute accent but is often incorrectly written as erdos or erdos either by mistake or out of typographical necess\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply the stemmer to each word in our string.\n",
+    "#stem it word by word,not the whole paragraph\n",
+    "stems = ps.stem(article)\n",
+    "stems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paul',\n",
+       " 'erdo',\n",
+       " 'and',\n",
+       " 'georg',\n",
+       " 'polya',\n",
+       " 'are',\n",
+       " 'influenti',\n",
+       " 'hungarian',\n",
+       " 'mathematician',\n",
+       " 'who']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply the stemmer to each word in our string.\n",
+    "stems = [ps.stem(word) for word in article.split()]\n",
+    "stems[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdo and georg polya are influenti hungarian mathematician who contribut a lot to the field erdos' name contain the hungarian letter 'o' 'o' with doubl acut accent but is often incorrectli written as erdo or erdo either by mistak or out of typograph necess\""
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Join our lists of words into a string again\n",
     "\n",
-    "article_stemmed = "
+    "article_stemmed = ' '.join(stems)\n",
+    "article_stemmed"
    ]
   },
   {
@@ -301,17 +462,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     /Users/lorisegovia/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Download the first time.\n",
-    "nltk.download('wordnet')"
+    "nltk.download('wordnet') #words that exist in the dictionary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,35 +503,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'influence'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check lemmatizer. It works.\n",
-    "\n",
+    "# now influence is no longer missing e \n",
     "wnl.lemmatize('influence')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paul',\n",
+       " 'erdos',\n",
+       " 'and',\n",
+       " 'george',\n",
+       " 'polya',\n",
+       " 'are',\n",
+       " 'influential',\n",
+       " 'hungarian',\n",
+       " 'mathematician',\n",
+       " 'who']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the lemmatizer on each word in the list of words we created by using split.\n",
     "\n",
-    "lemmas = "
+    "lemmas = [wnl.lemmatize(word) for word in article.split()]\n",
+    "lemmas[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos and george polya are influential hungarian mathematician who contributed a lot to the field erdos's name contains the hungarian letter 'o' 'o' with double acute accent but is often incorrectly written a erdos or erdos either by mistake or out of typographical necessity\""
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Join our list of words into a string again; assign to a variable to save changes.\n",
     "\n",
-    "article_lemmatized = "
+    "article_lemmatized = ' '.join(lemmas)\n",
+    "article_lemmatized"
    ]
   },
   {
@@ -369,6 +594,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# standard English language stopwords list from nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -379,54 +611,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\"]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stopword_list[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "179"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(stopword_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# you can add or remove from stopword list \n",
-    "\n"
+    "stopword_list.remove('no')\n",
+    "stopword_list.append(\"o\")\n",
+    "stopword_list.append(\"'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paul',\n",
+       " 'erdos',\n",
+       " 'and',\n",
+       " 'george',\n",
+       " 'polya',\n",
+       " 'are',\n",
+       " 'influential',\n",
+       " 'hungarian',\n",
+       " 'mathematician',\n",
+       " 'who']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split words in lemmatized article.\n",
     "\n",
-    "words = "
+    "words = article_lemmatized.split()\n",
+    "words[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['paul',\n",
+       " 'erdos',\n",
+       " 'george',\n",
+       " 'polya',\n",
+       " 'influential',\n",
+       " 'hungarian',\n",
+       " 'mathematician',\n",
+       " 'contributed',\n",
+       " 'lot',\n",
+       " 'field',\n",
+       " \"erdos's\",\n",
+       " 'name',\n",
+       " 'contains',\n",
+       " 'hungarian',\n",
+       " 'letter',\n",
+       " \"'o'\",\n",
+       " \"'o'\",\n",
+       " 'double',\n",
+       " 'acute',\n",
+       " 'accent',\n",
+       " 'often',\n",
+       " 'incorrectly',\n",
+       " 'written',\n",
+       " 'erdos',\n",
+       " 'erdos',\n",
+       " 'either',\n",
+       " 'mistake',\n",
+       " 'typographical',\n",
+       " 'necessity']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create a list of words from my string with stopwords removed and assign to variable.\n",
     "\n",
-    "filtered_words = "
+    "filtered_words = [word for word in words if word not in stopword_list]\n",
+    "filtered_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"paul erdos george polya influential hungarian mathematician contributed lot field erdos's name contains hungarian letter 'o' 'o' double acute accent often incorrectly written erdos erdos either mistake typographical necessity\""
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Join words in the list back into strings; assign to a variable to keep changes.\n",
     "\n",
-    "article_without_stopwords = "
+    "article_without_stopwords = ' '.join(filtered_words)\n",
+    "article_without_stopwords"
    ]
   },
   {
